Changed files for web and website at Parse Hosting

--- a/CocoaHeadsNL/CloudCode/public/index.html
+++ b/CocoaHeadsNL/CloudCode/public/index.html
@@ -13,9 +13,19 @@
   </head>
   <body>
     <div>
-      <h1>Congratulations! You're already hosting with Parse.</h1>
-      <p>To get started, edit this file at <em>public/index.html</em> and start adding static content.</p>
-      <p>If you want something a bit more dynamic, delete this file and check out <a href="https://parse.com/docs/hosting_guide#webapp">our hosting docs</a>.</p>
+      <h1>CocoaheadsNL</h1>
+      <p><a href="http://www.cocoaheads.nl"><img src ="images/CocoaHeads.png" title="CocoaheadsNL" width = "197" height="180"/></a></br></br>This is a little side project we're working on. To know more get in touch.</p></br></br></br></br>
+      <p>If you would like to know more about CocoaHeads in general please visit our <a href="https://www.cocoaheads.nl">website</a> or any other links below.</p>
+
+			<ul>
+				<li><a href="http://www.meetup.com/CocoaHeadsNL/">Join us!</a></li>
+				<li><a href="http://blog.cocoaheads.nl">Blog</a></li>
+				<li><a href="http://www.meetup.com/CocoaHeadsNL/photos/">Photos</a></li>
+				<li><a href="http://jobs.cocoaheads.nl">Jobs</a></li>
+				<li><a href="https://www.facebook.com/cocoaheadsNL/timeline">Facebook</a></li>
+				<li><a href="https://www.linkedin.com/groups/CocoaHeadsNL-7476559/about">Linkedin</a></li>
+				<li><a href="https://twitter.com/cocoaheadsnl">Twitter</a></li>
+			</ul>
     </div>
   </body>
 </html>
