--- a/CocoaHeadsNL/CloudCode/public/index.html
+++ b/CocoaHeadsNL/CloudCode/public/index.html
@@ -1,10 +1,10 @@
 
 <html>
   <head>
-    <title>My ParseApp site</title>
+    <title>CocoaheadsNL development environment</title>
     <style>
     body { font-family: Helvetica, Arial, sans-serif; }
-    div { width: 800px; height: 400px; margin: 40px auto; padding: 20px; border: 2px solid #5298fc; }
+    div { width: 800px; height: 400px; margin: 40px auto; padding: 20px; border: 2px solid #ffffff; }
     h1 { font-size: 30px; margin: 0; }
     p { margin: 40px 0; }
     em { font-family: monospace; }
@@ -14,8 +14,8 @@
   <body>
     <div>
       <h1>CocoaheadsNL</h1>
-      <p><a href="http://www.cocoaheads.nl"><img src ="images/CocoaHeads.png" title="CocoaheadsNL" width = "197" height="180"/></a></br></br>This is a little side project we're working on. To know more get in touch.</p></br></br></br></br>
-      <p>If you would like to know more about CocoaHeads in general please visit our <a href="https://www.cocoaheads.nl">website</a> or any other links below.</p>
+      <p><a href="http://www.cocoaheads.nl"><img src ="images/CocoaHeads.png" title="CocoaheadsNL" width = "197" height="180"/></a></br></br>This is a little side project we're working on. To know more get in touch.</br>
+      If you would like to know more about CocoaHeads in general please visit our <a href="https://www.cocoaheads.nl">website</a> or any other links below.</p>
 
 			<ul>
 				<li><a href="http://www.meetup.com/CocoaHeadsNL/">Join us!</a></li>
